--- a/mypy.ini
+++ b/mypy.ini
@@ -348,3 +348,6 @@ ignore_missing_imports = True
 
 [mypy-zope]
 ignore_missing_imports = True
+
+[mypy-incremental.*]
+ignore_missing_imports = True
