--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,6 +163,7 @@ psycopg2cffi = { version = ">=2.8", markers = "platform_python_implementation ==
 psycopg2cffi-compat = { version = "==1.1", markers = "platform_python_implementation == 'PyPy'", optional = true }
 pysaml2 = { version = ">=4.5.0", optional = true }
 authlib = { version = ">=0.14.0", optional = true }
+# Note: systemd-python 231 appears to have been yanked from pypi
 systemd-python = { version = ">=231", optional = true }
 lxml = { version = ">=4.2.0", optional = true }
 sentry-sdk = { version = ">=0.7.2", optional = true }
