--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -540,7 +540,7 @@ templates:
   #custom_template_directory: /path/to/custom/templates/
 
 # List of rooms to exclude from sync responses.
-# No room is excluded by default.
+# By default, no room is excluded.
 #
 #exclude_rooms_from_sync:
 #    - !foo:example.com
