Add missing dependency on importlib_metadata
Missed in #12088. We got away with it because we were indirectly
requiring it via other packages.

Without this change, we encounter pain in `poetry export`; and besides,
we should be explicit about our direct dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,6 +167,9 @@ ijson = ">=3.1.4"
 matrix-common = "~=1.1.0"
 # We need packaging.requirements.Requirement, added in 16.1.
 packaging = ">=16.1"
+# At the time of writing, we only use functions from the version `importlib.metadata`
+# which shipped in Python 3.8. This corresponds to version 1.4 of the backport.
+importlib_metadata = { version = ">=1.4", python = "<3.8" }
 
 
 # Optional Dependencies
