Revert "signedjson has type hints"
It does---but its dependencies don't (I think?)

This reverts commit 5478f0ae7ad7392510484c7628e0d6ac91a34bf3.

--- a/mypy.ini
+++ b/mypy.ini
@@ -321,6 +321,9 @@ ignore_missing_imports = True
 [mypy-service_identity.*]
 ignore_missing_imports = True
 
+[mypy-signedjson.*]
+ignore_missing_imports = True
+
 [mypy-treq.*]
 ignore_missing_imports = True
 
