--- a/.github/workflows/latest_deps.yml
+++ b/.github/workflows/latest_deps.yml
@@ -1,13 +1,12 @@
-# People who are freshly `pip install`ing from PyPI will pull in the latest versions of all
-# dependencies. Since most CI runs are against the locked poetry environment, run
-# specifically against the latest dependencies to know if there's an upcoming breaking
-# change.
+# People who are freshly `pip install`ing from PyPI will pull in the latest versions of
+# dependencies which match the broad requirements. Since most CI runs are against
+# the locked poetry environment, run specifically against the latest dependencies to
+# know if there's an upcoming breaking change.
 #
-# To plug that hole, this job is a canary which periodically
+# As an overview this workflow:
 # - checks out develop,
-# - pip installs from source (building a wheel locally using `poetry-core`,
-#   and `pip install`ing from that), and
-# - runs test suites against that checkout.
+# - installs from source, pulling in the dependencies like a fresh `pip install` would, and 
+# - runs mypy and test suites in that checkout.
 #
 # Based on the twisted trunk CI job.
 
