--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -2449,6 +2449,22 @@ push:
 #
 #encryption_enabled_by_default_for_room_type: invite
 
+# Override the default power levels for rooms created on this server, per
+# room creation preset.
+#
+# Useful if you know that your users need special permissions in rooms
+# that they create (e.g. to send particular types of state events without
+# needing an elevated power level).  This takes the same shape as the
+# `power_level_content_override` parameter in the /createRoom API, but
+# is applied before that parameter.
+#
+# This is something of a workaround in the absence of MSC3779 or MSC3761.
+#
+#default_power_level_content_override:
+#   private_chat: null
+#   trusted_private_chat: null
+#   public_chat: null
+
 
 # Uncomment to allow non-server-admin users to create groups on this server
 #
